test/classes/jplevyak/record_type_hierarchy-3-error.good
record_type_hierarchy-3-error.chpl:1: In function '__init_record_type_hierarchy-3-error':
record_type_hierarchy-3-error.chpl:16: error: Unresolved call 'f(:C)'
error: Candidates are:
record_type_hierarchy-3-error.chpl:10: error:   f(a: D)
